# wfplug-winshadows

./: meson.build
debian/: changelog  control  copyright  rules
debian/.debhelper/wfplug-winshadows/: dbgsym-build-ids
debian/.debhelper/wfplug-winshadows/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/wfplug-winshadows/dbgsym-root/usr/share/doc/: wfplug-winshadows-dbgsym
metadata/: meson.build  winshadows.xml
src/: deco-shadow.cpp  deco-shadow.hpp  shadow-surface.cpp
